tdf#90993 Fix anchored objects disappear

A stab at fixing when an anchor of a frame is changed all draw objects
anchored to the frame or anchored in the frame content disappear.

Change-Id: Icce446b759def60460a2b72bd9eb57b5749cd26f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195689
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>